docs: added layout shift prevention to design doc

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -330,6 +330,11 @@ sup {
   }
 }
 
+figure:has(> .subfigure) {
+  display: flex;
+  justify-content: center;
+}
+
 figure,
 .subfigure {
   margin: $base-margin;
